--- a/Project.html
+++ b/Project.html
@@ -44,47 +44,65 @@
         }
 
         .section {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
             width: 100%;
             margin: 40px 0;
             cursor: pointer;
         }
 
         .title {
-            font-size: 50px;
-            font-family: 'Anton', sans-serif;
+            font-size: 30px;
             margin-bottom: 10px;
+            text-align: center;
+            cursor: pointer;
         }
 
         .subtext {
-            font-size: 24px;
+            font-size: 18px;
             font-family: 'Shadows Into Light', cursive;
+            text-align: center;
+            cursor: pointer;
         }
 
         .hidden-section {
             display: none;
-            transition: all 0.3s ease;
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            z-index: 2000;
+            background-color: white;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+            transition: opacity 0.3s ease, transform 0.3s ease;
         }
 
-/* CSS styles remain the same, ensure you have the existing styles from previous examples */
-.hidden-section.visible {
-    display: block;
-}
+        .hidden-section.visible {
+            display: block;
+            opacity: 1;
+        }
 
         .image-wrapper {
             display: grid;
-            grid-template-columns: repeat(3, 1fr);
-            grid-gap: 20px;
+            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+            gap: 20px;
             margin-top: 20px;
         }
 
         .image-container {
             position: relative;
+            overflow: hidden;
+            border-radius: 10px;
         }
 
         .image-container img {
             width: 100%;
             height: auto;
-            border-radius: 20px;
+            border: 5px solid black;
+            border-radius: 10px;
             transition: transform 0.3s ease;
         }
 
@@ -93,26 +111,19 @@
         }
 
         .details {
-            font-family: 'Shadows Into Light', cursive;
             margin-top: 20px;
-            font-size: 18px;
+            text-align: center;
+            font-size: 16px;
+            line-height: 1.6;
         }
 
         @media (max-width: 768px) {
             .title {
-                font-size: 30px;
+                font-size: 24px;
             }
 
             .subtext {
-                font-size: 18px;
-            }
-
-            .image-wrapper {
-                grid-template-columns: 1fr;
-            }
-
-            .image-container img {
-                width: 100%;
+                font-size: 16px;
             }
         }
     </style>
@@ -127,24 +138,24 @@
     <div class="content">
         <!-- Company 1 -->
         <div class="section" onclick="toggleVisibility('company1')">
-            <div class="title">Hub of African’s Fashion Week (HAFW), Industry: Fashion</div>
+            <div class="title">Company 1, Industry: Fashion</div>
             <div class="subtext">Click to see the project's images</div>
             <div class="hidden-section" id="company1">
                 <div class="image-wrapper">
                     <div class="image-container">
-                        <img src="aid2.jpg" alt="Slide Image 1">
+                        <img src="psy11.jpg" alt="Slide Image 1">
                     </div>
                     <div class="image-container">
                         <img src="about1.png" alt="Slide Image 2">
                     </div>
                     <div class="image-container">
-                        <img src="aid4.jpg" alt="Slide Image 3">
+                        <img src="image4.jpg" alt="Slide Image 3">
                     </div>
                     <div class="image-container">
-                        <img src="about2.png" alt="Slide Image 4">
+                        <img src="image5.jpg" alt="Slide Image 4">
                     </div>
                     <div class="image-container">
-                        <img src="about3.png" alt="Slide Image 5">
+                        <img src="psy11.jpg" alt="Slide Image 5">
                     </div>
                 </div>
                 <div class="details">
@@ -153,13 +164,12 @@
                     ● Venue Design<br>
                     ● Staffing Solutions<br>
                     ● Comprehensive Reporting<br><br>
-                    More about what we did: We conducted an in-depth impact analysis to understand the potential outcomes of the event. Our team designed the venue layout to optimize attendee experience and logistics. We provided top-notch staffing solutions to ensure smooth operations throughout the event. Finally, we delivered comprehensive reporting to evaluate the event's success and areas for improvement.
+                    More about what we did: Detailed description here...
                 </div>
             </div>
         </div>
 
-        <!-- Repeat for each company -->
-        <!-- Company 2 -->
+        <!-- Repeat for Company 2 -->
         <div class="section" onclick="toggleVisibility('company2')">
             <div class="title">Company 2, Industry: Example</div>
             <div class="subtext">Click to see the project's images</div>
@@ -192,12 +202,12 @@
             </div>
         </div>
 
-        <!-- Repeat for all companies -->
-        <!-- Company 3 -->
-        <div class="section" onclick="toggleVisibility('company3')">
+
+        <!-- Repeat for Company 3 -->
+        <div class="section" onclick="toggleVisibility('company2')">
             <div class="title">Company 3, Industry: Example</div>
             <div class="subtext">Click to see the project's images</div>
-            <div class="hidden-section" id="company3">
+            <div class="hidden-section" id="company2">
                 <div class="image-wrapper">
                     <div class="image-container">
                         <img src="psy11.jpg" alt="Slide Image 1">
@@ -224,13 +234,12 @@
                     More about what we did: Detailed description here...
                 </div>
             </div>
-        </div>
 
-        <!-- Repeat for Company 4 -->
-        <div class="section" onclick="toggleVisibility('company4')">
+            <!-- Repeat for Company 4 -->
+        <div class="section" onclick="toggleVisibility('company2')">
             <div class="title">Company 4, Industry: Example</div>
             <div class="subtext">Click to see the project's images</div>
-            <div class="hidden-section" id="company4">
+            <div class="hidden-section" id="company2">
                 <div class="image-wrapper">
                     <div class="image-container">
                         <img src="psy11.jpg" alt="Slide Image 1">
@@ -259,79 +268,81 @@
             </div>
         </div>
 
-       <!-- Company 5 -->
-<div class="section" onclick="toggleVisibility('company5')">
-    <div class="title">Company 5, Industry: Example</div>
-    <div class="subtext">Click to see the project's images</div>
-    <div class="hidden-section" id="company5">
-        <div class="image-wrapper">
-            <div class="image-container">
-                <img src="psy11.jpg" alt="Slide Image 1">
-            </div>
-            <div class="image-container">
-                <img src="about1.png" alt="Slide Image 2">
-            </div>
-            <div class="image-container">
-                <img src="image4.jpg" alt="Slide Image 3">
-            </div>
-            <div class="image-container">
-                <img src="image5.jpg" alt="Slide Image 4">
-            </div>
-            <div class="image-container">
-                <img src="psy11.jpg" alt="Slide Image 5">
+            <!-- Repeat for Company 5 -->
+        <div class="section" onclick="toggleVisibility('company2')">
+            <div class="title">Company 5, Industry: Example</div>
+            <div class="subtext">Click to see the project's images</div>
+            <div class="hidden-section" id="company2">
+                <div class="image-wrapper">
+                    <div class="image-container">
+                        <img src="psy11.jpg" alt="Slide Image 1">
+                    </div>
+                    <div class="image-container">
+                        <img src="about1.png" alt="Slide Image 2">
+                    </div>
+                    <div class="image-container">
+                        <img src="image4.jpg" alt="Slide Image 3">
+                    </div>
+                    <div class="image-container">
+                        <img src="image5.jpg" alt="Slide Image 4">
+                    </div>
+                    <div class="image-container">
+                        <img src="psy11.jpg" alt="Slide Image 5">
+                    </div>
+                </div>
+                <div class="details">
+                    What We Did:<br>
+                    ● Example Task 1<br>
+                    ● Example Task 2<br>
+                    ● Example Task 3<br>
+                    ● Example Task 4<br><br>
+                    More about what we did: Detailed description here...
+                </div>
             </div>
         </div>
-        <div class="details">
-            What We Did:<br>
-            ● Example Task 1<br>
-            ● Example Task 2<br>
-            ● Example Task 3<br>
-            ● Example Task 4<br><br>
-            More about what we did: Detailed description here...
+
+            <!-- Repeat for Company 6 -->
+        <div class="section" onclick="toggleVisibility('company2')">
+            <div class="title">Company 6, Industry: Example</div>
+            <div class="subtext">Click to see the project's images</div>
+            <div class="hidden-section" id="company2">
+                <div class="image-wrapper">
+                    <div class="image-container">
+                        <img src="psy11.jpg" alt="Slide Image 1">
+                    </div>
+                    <div class="image-container">
+                        <img src="about1.png" alt="Slide Image 2">
+                    </div>
+                    <div class="image-container">
+                        <img src="image4.jpg" alt="Slide Image 3">
+                    </div>
+                    <div class="image-container">
+                        <img src="image5.jpg" alt="Slide Image 4">
+                    </div>
+                    <div class="image-container">
+                        <img src="psy11.jpg" alt="Slide Image 5">
+                    </div>
+                </div>
+                <div class="details">
+                    What We Did:<br>
+                    ● Example Task 1<br>
+                    ● Example Task 2<br>
+                    ● Example Task 3<br>
+                    ● Example Task 4<br><br>
+                    More about what we did: Detailed description here...
+                </div>
+            </div>
+        </div>
+
         </div>
     </div>
-</div>
 
-<!-- Company 6 -->
-<div class="section" onclick="toggleVisibility('company6')">
-    <div class="title">Company 6, Industry: Example</div>
-    <div class="subtext">Click to see the project's images</div>
-    <div class="hidden-section" id="company6">
-        <div class="image-wrapper">
-            <div class="image-container">
-                <img src="psy11.jpg" alt="Slide Image 1">
-            </div>
-            <div class="image-container">
-                <img src="about1.png" alt="Slide Image 2">
-            </div>
-            <div class="image-container">
-                <img src="image4.jpg" alt="Slide Image 3">
-            </div>
-            <div class="image-container">
-                <img src="image5.jpg" alt="Slide Image 4">
-            </div>
-            <div class="image-container">
-                <img src="psy11.jpg" alt="Slide Image 5">
-            </div>
-        </div>
-        <div class="details">
-            What We Did:<br>
-            ● Example Task 1<br>
-            ● Example Task 2<br>
-            ● Example Task 3<br>
-            ● Example Task 4<br><br>
-            More about what we did: Detailed description here...
-        </div>
-    </div>
-</div>
-
-<script>
-    function toggleVisibility(id) {
-        const section = document.getElementById(id);
-        section.classList.toggle('visible');
-    }
-</script>
-
+    <script>
+        function toggleVisibility(id) {
+            const section = document.getElementById(id);
+            section.classList.toggle('visible');
+            document.body.classList.toggle('blurred');
+        }
+    </script>
 </body>
 </html>
-
