--- a/Project.html
+++ b/Project.html
@@ -5,128 +5,146 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About - LaMonje</title>
     <link href="https://fonts.googleapis.com/css2?family=Anton&family=Shadows+Into+Light&display=swap" rel="stylesheet">
-    <style>
-        body {
-            background-color: #EAE2B7;
-            color: #000000;
-            font-family: 'Anton', sans-serif;
-            margin: 0;
-            padding: 0;
-        }
+ <style>
+    body {
+        background-color: #EAE2B7;
+        color: #000000;
+        font-family: 'Anton', sans-serif;
+        margin: 0;
+        padding: 0;
+    }
 
-        .navbar {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            padding: 10px;
-            position: sticky;
-            top: 0;
-            z-index: 1000;
-            background: transparent;
-        }
+    .navbar {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 10px;
+        position: sticky;
+        top: 0;
+        z-index: 1000;
+        background: transparent;
+    }
 
-        .navbar a {
-            color: #FB8500;
-            text-decoration: none;
-            margin: 0 15px;
-            transition: color 0.3s ease;
-        }
+    .navbar a {
+        color: #FB8500;
+        text-decoration: none;
+        margin: 0 15px;
+        transition: color 0.3s ease;
+    }
 
-        .navbar a:hover {
-            color: #000;
-        }
+    .navbar a:hover {
+        color: #000;
+    }
 
-        .content {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            padding: 20px;
-        }
+    .content {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 20px;
+    }
 
-        .section {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            width: 100%;
-            margin: 40px 0;
-            cursor: pointer;
-        }
+    .section {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+        margin: 40px 0;
+        cursor: pointer;
+    }
 
+    .title {
+        font-size: 120px; /* Very large header size */
+        margin-bottom: 10px;
+        text-align: center;
+        cursor: pointer;
+        transition: transform 0.3s ease; /* Melting effect */
+    }
+
+    .title:hover {
+        transform: scale(1.1);
+    }
+
+    .subtext {
+        font-size: 36px; /* Larger subtext size */
+        font-weight: bold;
+        color: #FB8500; /* Orange color */
+        text-align: center;
+        margin-top: 10px;
+        cursor: pointer;
+        transition: color 0.3s ease;
+    }
+
+    .subtext:hover {
+        color: #FF5733; /* Darker shade of orange */
+    }
+
+    .hidden-section {
+        display: none;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        z-index: 2000;
+        background-color: rgba(0, 0, 0, 0.8); /* Fully blurred background */
+        padding: 20px;
+        overflow-y: auto;
+    }
+
+    .hidden-section.visible {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .image-wrapper {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+        gap: 20px;
+        margin-top: 20px;
+        padding: 20px;
+        width: 80%;
+        max-width: 1200px;
+    }
+
+    .image-container {
+        position: relative;
+        overflow: hidden;
+        border-radius: 10px;
+        box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
+    }
+
+    .image-container img {
+        width: 100%;
+        height: auto;
+        border-radius: 10px;
+        transition: transform 0.3s ease;
+    }
+
+    .image-container img:hover {
+        transform: scale(1.1);
+    }
+
+    .details {
+        margin-top: 20px;
+        text-align: center;
+        font-size: 24px;
+        line-height: 1.6;
+        color: white; /* Handwritten font color */
+        font-family: 'Shadows Into Light', cursive; /* Handwritten font */
+    }
+
+    @media (max-width: 768px) {
         .title {
-            font-size: 30px;
-            margin-bottom: 10px;
-            text-align: center;
-            cursor: pointer;
+            font-size: 80px; /* Responsive header size */
         }
 
         .subtext {
-            font-size: 18px;
-            font-family: 'Shadows Into Light', cursive;
-            text-align: center;
-            cursor: pointer;
+            font-size: 24px; /* Responsive subtext size */
         }
-
-        .hidden-section {
-            display: none;
-            position: fixed;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            z-index: 2000;
-            background-color: white;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
-            transition: opacity 0.3s ease, transform 0.3s ease;
-        }
-
-        .hidden-section.visible {
-            display: block;
-            opacity: 1;
-        }
-
-        .image-wrapper {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-            gap: 20px;
-            margin-top: 20px;
-        }
-
-        .image-container {
-            position: relative;
-            overflow: hidden;
-            border-radius: 10px;
-        }
-
-        .image-container img {
-            width: 100%;
-            height: auto;
-            border: 5px solid black;
-            border-radius: 10px;
-            transition: transform 0.3s ease;
-        }
-
-        .image-container img:hover {
-            transform: scale(1.1);
-        }
-
-        .details {
-            margin-top: 20px;
-            text-align: center;
-            font-size: 16px;
-            line-height: 1.6;
-        }
-
-        @media (max-width: 768px) {
-            .title {
-                font-size: 24px;
-            }
-
-            .subtext {
-                font-size: 16px;
-            }
-        }
-    </style>
+    }
+</style>
 </head>
 <body>
     <div class="navbar">
@@ -139,7 +157,7 @@
         <!-- Company 1 -->
         <div class="section" onclick="toggleVisibility('company1')">
             <div class="title">Company 1, Industry: Fashion</div>
-            <div class="subtext">Click to see the project's images</div>
+            <div class="subtext">Explore the Project</div>
             <div class="hidden-section" id="company1">
                 <div class="image-wrapper">
                     <div class="image-container">
@@ -172,7 +190,7 @@
         <!-- Repeat for Company 2 -->
         <div class="section" onclick="toggleVisibility('company2')">
             <div class="title">Company 2, Industry: Example</div>
-            <div class="subtext">Click to see the project's images</div>
+            <div class="subtext">Explore the Project</div>
             <div class="hidden-section" id="company2">
                 <div class="image-wrapper">
                     <div class="image-container">
@@ -202,139 +220,8 @@
             </div>
         </div>
 
+        <!-- Repeat for other companies -->
 
-        <!-- Repeat for Company 3 -->
-        <div class="section" onclick="toggleVisibility('company2')">
-            <div class="title">Company 3, Industry: Example</div>
-            <div class="subtext">Click to see the project's images</div>
-            <div class="hidden-section" id="company2">
-                <div class="image-wrapper">
-                    <div class="image-container">
-                        <img src="psy11.jpg" alt="Slide Image 1">
-                    </div>
-                    <div class="image-container">
-                        <img src="about1.png" alt="Slide Image 2">
-                    </div>
-                    <div class="image-container">
-                        <img src="image4.jpg" alt="Slide Image 3">
-                    </div>
-                    <div class="image-container">
-                        <img src="image5.jpg" alt="Slide Image 4">
-                    </div>
-                    <div class="image-container">
-                        <img src="psy11.jpg" alt="Slide Image 5">
-                    </div>
-                </div>
-                <div class="details">
-                    What We Did:<br>
-                    ● Example Task 1<br>
-                    ● Example Task 2<br>
-                    ● Example Task 3<br>
-                    ● Example Task 4<br><br>
-                    More about what we did: Detailed description here...
-                </div>
-            </div>
-
-            <!-- Repeat for Company 4 -->
-        <div class="section" onclick="toggleVisibility('company2')">
-            <div class="title">Company 4, Industry: Example</div>
-            <div class="subtext">Click to see the project's images</div>
-            <div class="hidden-section" id="company2">
-                <div class="image-wrapper">
-                    <div class="image-container">
-                        <img src="psy11.jpg" alt="Slide Image 1">
-                    </div>
-                    <div class="image-container">
-                        <img src="about1.png" alt="Slide Image 2">
-                    </div>
-                    <div class="image-container">
-                        <img src="image4.jpg" alt="Slide Image 3">
-                    </div>
-                    <div class="image-container">
-                        <img src="image5.jpg" alt="Slide Image 4">
-                    </div>
-                    <div class="image-container">
-                        <img src="psy11.jpg" alt="Slide Image 5">
-                    </div>
-                </div>
-                <div class="details">
-                    What We Did:<br>
-                    ● Example Task 1<br>
-                    ● Example Task 2<br>
-                    ● Example Task 3<br>
-                    ● Example Task 4<br><br>
-                    More about what we did: Detailed description here...
-                </div>
-            </div>
-        </div>
-
-            <!-- Repeat for Company 5 -->
-        <div class="section" onclick="toggleVisibility('company2')">
-            <div class="title">Company 5, Industry: Example</div>
-            <div class="subtext">Click to see the project's images</div>
-            <div class="hidden-section" id="company2">
-                <div class="image-wrapper">
-                    <div class="image-container">
-                        <img src="psy11.jpg" alt="Slide Image 1">
-                    </div>
-                    <div class="image-container">
-                        <img src="about1.png" alt="Slide Image 2">
-                    </div>
-                    <div class="image-container">
-                        <img src="image4.jpg" alt="Slide Image 3">
-                    </div>
-                    <div class="image-container">
-                        <img src="image5.jpg" alt="Slide Image 4">
-                    </div>
-                    <div class="image-container">
-                        <img src="psy11.jpg" alt="Slide Image 5">
-                    </div>
-                </div>
-                <div class="details">
-                    What We Did:<br>
-                    ● Example Task 1<br>
-                    ● Example Task 2<br>
-                    ● Example Task 3<br>
-                    ● Example Task 4<br><br>
-                    More about what we did: Detailed description here...
-                </div>
-            </div>
-        </div>
-
-            <!-- Repeat for Company 6 -->
-        <div class="section" onclick="toggleVisibility('company2')">
-            <div class="title">Company 6, Industry: Example</div>
-            <div class="subtext">Click to see the project's images</div>
-            <div class="hidden-section" id="company2">
-                <div class="image-wrapper">
-                    <div class="image-container">
-                        <img src="psy11.jpg" alt="Slide Image 1">
-                    </div>
-                    <div class="image-container">
-                        <img src="about1.png" alt="Slide Image 2">
-                    </div>
-                    <div class="image-container">
-                        <img src="image4.jpg" alt="Slide Image 3">
-                    </div>
-                    <div class="image-container">
-                        <img src="image5.jpg" alt="Slide Image 4">
-                    </div>
-                    <div class="image-container">
-                        <img src="psy11.jpg" alt="Slide Image 5">
-                    </div>
-                </div>
-                <div class="details">
-                    What We Did:<br>
-                    ● Example Task 1<br>
-                    ● Example Task 2<br>
-                    ● Example Task 3<br>
-                    ● Example Task 4<br><br>
-                    More about what we did: Detailed description here...
-                </div>
-            </div>
-        </div>
-
-        </div>
     </div>
 
     <script>
