--- a/Project.html
+++ b/Project.html
@@ -5,13 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About - LaMonje</title>
     <link href="https://fonts.googleapis.com/css2?family=Anton&family=Shadows+Into+Light&display=swap" rel="stylesheet">
- <style>
+<style>
     body {
         background-color: #EAE2B7;
         color: #000000;
         font-family: 'Anton', sans-serif;
         margin: 0;
         padding: 0;
+        transition: filter 0.3s ease; /* Transition for blur effect */
+    }
+
+    .blurred {
+        filter: blur(5px); /* Blur effect */
+        pointer-events: none; /* Disable clicking on blurred elements */
     }
 
     .navbar {
@@ -58,6 +64,7 @@
         text-align: center;
         cursor: pointer;
         transition: transform 0.3s ease; /* Melting effect */
+        animation: floatAnimation 3s infinite alternate; /* Floating animation */
     }
 
     .title:hover {
@@ -86,9 +93,11 @@
         width: 100%;
         height: 100%;
         z-index: 2000;
-        background-color: rgba(0, 0, 0, 0.8); /* Fully blurred background */
+        background-color: rgba(255, 255, 255, 0.9); /* Fully blurred white background */
+        backdrop-filter: blur(10px); /* Apply blur to background */
         padding: 20px;
         overflow-y: auto;
+        pointer-events: auto; /* Enable clicking on pop-up */
     }
 
     .hidden-section.visible {
@@ -131,8 +140,17 @@
         text-align: center;
         font-size: 24px;
         line-height: 1.6;
-        color: white; /* Handwritten font color */
+        color: #000000; /* Handwritten font color */
         font-family: 'Shadows Into Light', cursive; /* Handwritten font */
+    }
+
+    @keyframes floatAnimation {
+        0%, 100% {
+            transform: translateY(0);
+        }
+        50% {
+            transform: translateY(-20px);
+        }
     }
 
     @media (max-width: 768px) {
