--- a/Project.html
+++ b/Project.html
@@ -212,7 +212,7 @@
     <div class="content">
         <!-- Company 1 -->
         <div class="section" onclick="toggleVisibility('company1')">
-            <div class="title">Action Aid ETHIOPIA</div>
+            <div class="title">Action Aid Ethiopia: Industry, NGO</div>
             <div class="subtext">Explore the Project</div>
             <div class="hidden-section" id="company1">
                 <div class="close-button" onclick="toggleVisibility('company1')">X</div>
@@ -258,7 +258,7 @@
 
         <!-- Company 2 -->
         <div class="section" onclick="toggleVisibility('company1')">
-            <div class="title">Company 2, Industry: Fashion</div>
+            <div class="title">Hub of African’s Fashion Week (HAFW), Industry: Fashion</div>
             <div class="subtext">Explore the Project</div>
             <div class="hidden-section" id="company1">
                 <div class="close-button" onclick="toggleVisibility('company1')">X</div>
@@ -304,7 +304,7 @@
 
         <!-- Company 3 -->
         <div class="section" onclick="toggleVisibility('company1')">
-            <div class="title">Company 3, Industry: Fashion</div>
+            <div class="title">PEP & MCF, Industry: Industry, NGO</div>
             <div class="subtext">Explore the Project</div>
             <div class="hidden-section" id="company1">
                 <div class="close-button" onclick="toggleVisibility('company1')">X</div>
@@ -350,7 +350,7 @@
 
         <!-- Company 4 -->
         <div class="section" onclick="toggleVisibility('company1')">
-            <div class="title">Company 4, Industry: Fashion</div>
+            <div class="title">PSY ADDIS</div>
             <div class="subtext">Explore the Project</div>
             <div class="hidden-section" id="company1">
                 <div class="close-button" onclick="toggleVisibility('company1')">X</div>
@@ -397,7 +397,7 @@
 
         <!-- Company 5 -->
         <div class="section" onclick="toggleVisibility('company1')">
-            <div class="title">Company 5, Industry: Fashion</div>
+            <div class="title">Mignot Bazaar, Industry, Marketplace</div>
             <div class="subtext">Explore the Project</div>
             <div class="hidden-section" id="company1">
                 <div class="close-button" onclick="toggleVisibility('company1')">X</div>
@@ -444,7 +444,7 @@
 
         <!-- Company 6 -->
         <div class="section" onclick="toggleVisibility('company1')">
-            <div class="title">Company 6, Industry: Fashion</div>
+            <div class="title">LookUP Industry Workshop</div>
             <div class="subtext">Explore the Project</div>
             <div class="hidden-section" id="company1">
                 <div class="close-button" onclick="toggleVisibility('company1')">X</div>
